[package]
name = "auto-battler-core"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.28'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.28'
version = '4.0.0-dev'

[dependencies.serde]
version = "1.0.142"
optional = true
features = ["derive"]

[dependencies.codec]
features = ['derive']
default-features = false
package = 'parity-scale-codec'
version = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'sp-std/std',
    'serde'
]